# voxelscape

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  README.md  download.html  index.html
assets/css/: fontawesome-all.min.css  main.css
assets/js/: breakpoints.min.js  browser.min.js  jquery.min.js  jquery.scrollex.min.js  jquery.scrolly.min.js  main.js  util.js
dependencies/glad/src/: glad.c
dependencies/stb/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glfw/: CMakeLists.txt
shaders/: basic.frag  basic.vert  chunk_mesh.comp  chunk_mesh_generator.comp  chunk_shader.frag  chunk_shader.vert
src/: application.cpp  application.h  camera.cpp  camera.h  config.cpp  config.h  log.cpp  log.h  main.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
src/engine/: log.cpp  log.h  mesh.h  shader.h  window.cpp  window.h
src/graphics/: camera.cpp  camera.h  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/input/: input.h  keyboard_input.cpp  mouse_input.cpp
src/util/: log.cpp  log.h  time.cpp  timer.cpp  timer.h
src/world/: block.cpp  block.h  block_id.h  chunk.cpp  chunk.h  chunk_mesh.cpp  direction.h  world.h
src/world/block/: block.h  block_atlas.cpp  block_atlas.h  block_id.h  blockid.h
src/world/chunk/: chunk.cpp  chunk.h  chunk_constants.h
textures/: texture_atlas.xcf
